--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
 			<version>3.6.0</version>
 			<classifier>models</classifier>
 		</dependency>
-
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>eclipselink</artifactId>
+	  <version>2.5.2</version>
+	 </dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>${src.dir}</sourceDirectory>
