--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
     <artifactId>eclipselink</artifactId>
     <version>2.5.2</version>
    </dependency>
+    <dependency>
+      <groupId>org.jdatepicker</groupId>
+      <artifactId>jdatepicker</artifactId>
+      <version>1.3.4</version>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>${src.dir}</sourceDirectory>
