--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
       <version>3.6.0</version>
       <classifier>models</classifier>
     </dependency>
-   <dependency>
-    <groupId>org.eclipse.persistence</groupId>
-    <artifactId>eclipselink</artifactId>
-    <version>2.5.2</version>
-   </dependency>
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>eclipselink</artifactId>
+      <version>2.5.2</version>
+    </dependency>
     <dependency>
       <groupId>org.jdatepicker</groupId>
       <artifactId>jdatepicker</artifactId>
@@ -69,7 +69,12 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>2.11.8</version>
-      </dependency>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.0</version>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>${src.dir}</sourceDirectory>
